cmake_minimum_required(VERSION 2.8)
project(bp)
set(CMAKE_C_FLAGS "-std=c99 ${CMAKE_C_FLAGS}")
if (ARCH EQUAL "mips64")
    set(CMAKE_C_FLAGS "-march=mips64r2 -mabi=64 ${CMAKE_C_FLAGS}")
endif ()
add_executable(bp aarch64.h apple.h bp.c linux.h mips64.h ppc64.h s390x.h x86_64.h)
add_custom_target(format COMMAND clang-format -style=file -i *.c *.h)
